istio-system/jaeger-service-load-balancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: jaeger-service-load-balancer
  namespace: istio-system
spec:
  type: LoadBalancer
  selector:
      app: jaeger
  ports:
    - port: 11006
      targetPort: 16686
