istio-system/kiali-service-load-balancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: kiali-service-load-balancer
  namespace: istio-system
spec:
  type: LoadBalancer
  selector:
      app: kiali
  ports:
    - port: 11002
      targetPort: 20001
