istio-system/prometheus-service-load-balancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-service-load-balancer
  namespace: istio-system
spec:
  type: LoadBalancer
  selector:
      app: prometheus
  ports:
    - port: 11004
      targetPort: 9090
