istio-system/service-load-balancer.yaml
# Create an External Load Balancer
apiVersion: v1
kind: Service
metadata:
  name: kiali-service-load-balancer
  namespace: istio-system
spec:
  selector:
    app: kiali
  ports:
    - port: 11002
      targetPort: 20001  
  type: LoadBalancer
