istio-system/zipkin-service-load-balancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: zipkin-service-load-balancer
  namespace: istio-system
spec:
  type: LoadBalancer
  selector:
      app: zipkin
  ports:
    - port: 11005
      targetPort: 9411
