istio-system/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali-virutal-service
  namespace: istio-system
spec:
  gateways:
    - httpbin-gateway
  hosts:
    - "*"
  http:
    - match:
        - uri:
            prefix: /kiali
      route:
        - destination:
            host: kiali
            port:
              number: 20001
      retries:
        attempts: 3
        perTryTimeout: 2s
        retryOn: 5xx
